--- a/user.css
+++ b/user.css
@@ -79,7 +79,7 @@ h1 {
 
 .jumbotron {
   background: linear-gradient(#ffff99, transparent 95%),
-  url('flowers.JPG') no-repeat center;
+  url('clouds.jpg') no-repeat center;
   background-size: cover;
   font-family: verdana !important;
   font-size: 25px !important;
