--- a/user.css
+++ b/user.css
@@ -21,7 +21,7 @@ header {
    width: 100%;
    height: 45%;
    padding:0;
-   position:relative;
+   position: absolute;
    top: 0;
    left: 0;
 
@@ -46,7 +46,7 @@ footer {
 	padding: .6em 0;
 	background: #99E1D9;
 	margin-top: 50px;
-	position: absolute;
+	position: absolute !important;
   right: 0;
   bottom: 0;
   left: 0;
