--- a/user.css
+++ b/user.css
@@ -15,6 +15,18 @@ body {
 }
 
 
+header {
+
+ 
+   width: 100%;
+   height: 45%;
+   padding:0;
+   position:relative;
+   top: 0;
+   left: 0;
+
+}
+
 
 
 
