--- a/user.css
+++ b/user.css
@@ -20,10 +20,7 @@ header {
  
    width: 100%;
    height: 45%;
-   padding:0;
-   position:relative;
-   top: 0;
-   left: 0;
+   
 
 }
 
@@ -69,6 +66,7 @@ h1 {
   color: l;
   font-size: 2.5em;
   margin-left: 60px;
+	text-align:center;
 
 }
 
