--- a/user.css
+++ b/user.css
@@ -76,11 +76,13 @@ h1 {
 }
 
 .jumbotron { 
-  background: linear-gradient(#ffff99, transparent 95%),
+  background: linear-gradient(#ffff99, transparent 97%),
   url('flowers1.jpg') no-repeat center;
   background-size: cover;
   font-family: verdana !important;
   font-size: 25px !important;
+  padding: 5em inherit !important;	
+
  
 
 
