--- a/user.css
+++ b/user.css
@@ -76,11 +76,11 @@ h1 {
 }
 
 .navbar {
-	max-height: 1.75em;
+	max-height: 2.4em;
 }
 
 .jumbotron { 
-  background: linear-gradient(#ffff99, transparent 97%),
+  background: linear-gradient(#FBFAD8, transparent 97%),
   url('flowers1.jpg') no-repeat center;
   background-size: cover;
   font-family: verdana !important;
