--- a/user.css
+++ b/user.css
@@ -23,7 +23,7 @@ h1 {
   z-index: 1;
 }	
 	
-}
+
 header {
 
  
@@ -95,7 +95,14 @@ h1 {
     margin-bottom: 50px;
 	 padding-top: 50px !important;
   }
+
 .collapse {
+display: flex;
+justify-content: space-around;
+	
+}
+
+.navbar {
 display: flex;
 justify-content: space-around;
 	
