--- a/user.css
+++ b/user.css
@@ -104,7 +104,7 @@ justify-content: space-between;
 
 .navbar {
 display: flex;
-justify-content: space-around;
+justify-content: space-between;
 	
 	
 }
