--- a/user.css
+++ b/user.css
@@ -150,3 +150,30 @@ background-color: #fff2ac;
 
 
 }
+
+
+@media only screen and (max-width: 600px) {
+  
+  .card {
+    margin-left:50px;
+    width:90%;
+    text-align: center;
+    
+  }
+  .col-md {
+	  margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+	
+@media only screen and (max-width: 500px) {	
+h1 { 
+
+  background-size: cover;
+  font-family: verdana, helvetica !important;
+background-color: #fff2ac;
+    background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%);
+  
+
+}
+}
