--- a/user.css
+++ b/user.css
@@ -170,8 +170,15 @@ h1 {
   background-size: cover;
   font-family: verdana, helvetica !important;
 background-color: #fff2ac;
-    background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%);
+    background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%, transparent 60%);
+	font-weight: 900;
   
 
 }
 }
+
+ .col-md {
+	  margin-top: 30px;
+    margin-bottom: 20px;
+	 margin-left: 30px;
+  }
