--- a/user.css
+++ b/user.css
@@ -167,7 +167,6 @@ display: flex;
 @media only screen and (max-width: 500px) {	
 h1 { 
 
-  background-size: cover;
   font-family: verdana, helvetica !important;
 background-color: #fff2ac;
     background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%, transparent 60%);
@@ -175,10 +174,10 @@ background-color: #fff2ac;
   
 
 }
-}
+
 
  .col-md {
 	  margin-top: 30px;
     margin-bottom: 20px;
 	 margin-left: 30px;
-  }
+	}}
