--- a/user.css
+++ b/user.css
@@ -173,7 +173,7 @@ h1 {
   font-family: verdana, helvetica !important;
 background-color: #fff2ac;
     background-image: linear-gradient(to right, #ffe359 0%, #fff2ac 100%, transparent 70%);
-	font-weight: bold;
+	font-weight: bold !important;
   
 
 }
@@ -184,6 +184,7 @@ background-color: #fff2ac;
   background-size: cover;
   font-family: verdana, helvetica !important;
   font-size: 25px !important;	
+		font-weight: bold !important;
 	min-height: 310px !important;
 
 
